chart-k8s/temporal/templates/temporal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      containers:
      - name: temporal
        image: temporalio/auto-setup:1.16.2
        ports:
        - containerPort: 7233
        volumeMounts:
        - name: temporal-config
          mountPath: /etc/temporal/config/dynamicconfig
      volumes:
      - name: temporal-config
        configMap:
          name: temporal-dynamicconfig
---
apiVersion: v1
kind: Service
metadata:
  name: temporal
spec:
  selector:
    app: temporal
  ports:
  - port: 7233
    targetPort: 7233
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-web
  template:
    metadata:
      labels:
        app: temporal-web
    spec:
      containers:
      - name: temporal-web
        image: temporalio/web:1.13.0
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-web
spec:
  selector:
    app: temporal-web
  ports:
  - port: 8088
    targetPort: 8088
  type: NodePort  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-admin-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-admin-tools
  template:
    metadata:
      labels:
        app: temporal-admin-tools
    spec:
      containers:
      - name: admin-tools
        image: temporalio/admin-tools:1.16.2
        command: ["sleep", "infinity"]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: temporal-web-ingress
spec:
  rules:
  - host: kekibook.uk
    http:
      paths:
      - backend:
          service:
            name: temporal-web
            port:
              number: 8088
        path: /temporal
        pathType: Prefix
